tests/poof/fixtures/errors/error1.1.cpp
struct foo
{
  int bar;
};

poof(
  func (foo F)
  {
    F.type.garbage
  }
)


